# oop-labs

lab2/: CMakeLists.txt  Makefile
lab2/lib/: Thirteen.h
lab2/src/: Thirteen.cpp  main.cpp
lab2/tests/: tests.cpp
lab3/: CMakeLists.txt  Makefile
lab3/lib/: Figure.h  Point.h  Rectangle.h  Segment.h  Square.h  Trapezoid.h  Validators.h
lab3/src/: main.cpp
lab3/tests/: tests.cpp
lab5/: CMakeLists.txt  Makefile
lab5/lib/: allocator.h  vector.h
lab5/src/: main.cpp
lab5/tests/: allocator_tests.cpp  vector_tests.cpp
lab6/: CMakeLists.txt
lab6/lib/: DeathAgregator.h  NPC.h  Observer.h  UI.h  Visitor.h
lab6/logs/: npc.txt
lab6/src/: main.cpp
lab7/: Makefile
lab7/lib/: Menu.h  NPCFabric.h
lab7/logs/: log.txt
